@@ -18,7 +18,12 @@
 #include <caml/alloc.h>
 #include "unixsupport.h"
 
+double unix_time_unboxed(value unit)
+{
+  return ((double) time((time_t *) NULL));
+}
+
 CAMLprim value unix_time(value unit)
 {
-  return caml_copy_double((double) time((time_t *) NULL));
+  return caml_copy_double(unix_time_unboxed(unit));
 }
